STYLE-Fix css dark mode on farmer page

--- a/apps/GABOR45/src/theme/variables.css
+++ b/apps/GABOR45/src/theme/variables.css
@@ -14,12 +14,14 @@ http://ionicframework.com/docs/theming/ */
 
   --ion-background-color: rgba(246, 252, 251);
 
+
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
+  --ion-color-secondary:  #ffffff;
   --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast: #164550;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
+  --ion-color-secondary-shade: #121212;
+  --ion-color-secondary-shade-rgba: 100, 0, 0, 0, 0.25;
   --ion-color-secondary-tint: #50c8ff;
 
   /** tertiary **/
@@ -94,15 +96,15 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-primary-contrast: #f6fcfb;
     --ion-color-primary-contrast-rgb: 255,255,255;
     --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #164550;
+    --ion-color-primary-tint: #e4e4e4;
     --ion-color-facebook: #2b5c93;
 
-    --ion-color-secondary: #164550;
+    --ion-color-secondary: #121212;
     --ion-color-secondary-rgb: 80,200,255;
-    --ion-color-secondary-contrast: #ffffff;
+    --ion-color-secondary-contrast: #e4e4e4;
     --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #164550;
-    --ion-color-secondary-tint: #164550;
+    --ion-color-secondary-shade: #121212;
+    --ion-color-secondary-tint: #121212;
 
     --ion-color-tertiary: #6a64ff;
     --ion-color-tertiary-rgb: 106,100,255;
